[tool.poetry]
name = "epsa-webapp-captcha-bypass"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
license = "GNU GENERAL PUBLIC LICENSE V3"
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"
flask = "^3.0.3"
aiogram = "^3.4.1"


[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.isort]
line_length = 125
profile = "black"
